5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1638_2449.log
== TEST (2019-04-12 21:50:03) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if (a*e - b*d == 0):
	y = (a*f - c*d)/ a*e - b*d
	x = (c*e - b*f)/ a*e - b*d
	resp= "Nao tem solucao"
else: 
	x = (c*e - b*f)/ a*e - b*d
print(resp)
	
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:52:16) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if (a*e - b*d == 0):
	resp= "Nao tem solucao"
else: 
   x = (c*e - b*f)/ a*e - b*d
	y = (a*f - c*d)/ a*e - b*d
   print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 12
    y = (a*f - c*d)/ a*e - b*d
                             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:53:43) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if (a*e - b*d == 0):
	resp= "Nao tem solucao"
   print(resp)
else:
   x = (c*e - b*f)/ a*e - b*d
	y = (a*f - c*d)/ a*e - b*d
   print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 10
    print(resp)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:54:11) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
if (a*e - b*d == 0):
	resp= "Nao tem solucao"
   print(resp)
else:
   x = (c*e - b*f)/ a*e - b*d
	y = (a*f - c*d)/ a*e - b*d
   print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 9
    print(resp)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:56:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ a*e - b*d
	y = (a*f - c*d)/ a*e - b*d
   print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:56:31) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ a*e - b*d
	y = (a*f - c*d)/ a*e - b*d
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:59:34) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:59:44) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 22:00:02) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- EXECUTION TIME:
0.109637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 14, in <module>
    print(x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:00:52) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:01:01) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
   print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
File "XXXX", line 10
    print(resp)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:01:29) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:01:56) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:02:22) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:03:26) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 22:03:47) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- EXECUTION TIME:
0.168764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:05:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 22:05:32) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:49:40) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
   x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
File "XXXX", line 15
    y = (a*f - c*d)/ (a*e - b*d)
                               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:50:02) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
   x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
print(x)
print(y)
	
-- ERROR:
File "XXXX", line 15
    y = (a*f - c*d)/ (a*e - b*d)
                               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:50:33) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:50:42) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- EXECUTION TIME:
0.139928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:51:05) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:51:48) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d = 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
File "XXXX", line 10
    if(a*e - b*d = 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:53:53) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)

if(a*e - b*d <= 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:58:24) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)
z = (a*e) - (b*d) 

if(z == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:58:40) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e - b*f)/ (a*e - b*d)
y = (a*f - c*d)/ (a*e - b*d)
z = (a*e) - (b*d) 

if(z == 0):
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:00:19) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
z = (a*e) - (b*d) 

if(z == 0):
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = (c*e - b*f)/ (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:01:02) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
z = (a*e) - (b*d) 

if(z == 0):
	x = (c*e - b*f)/ ((a*e) - (b*d))
	y = (a*f - c*d)/ ((a*e) - (b*d))
	resp = "Nao tem solucao"
	print(resp)
else:
	x = (c*e - b*f)/ (a*e - b*d)
	y = (a*f - c*d)/ (a*e - b*d)	
print(x)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = (c*e - b*f)/ ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 12:06:00) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
z = (a*e) - (b*d) 

if(z != 0):
	x = (c*e - b*f)/ ((a*e) - (b*d))
	y = (a*f - c*d)/ ((a*e) - (b*d))
	print(x)
	print(y)
else:
	resp = "Nao tem solucao"
	print(resp)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:06:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
z = (a*e) - (b*d) 

if(z != 0):
	x = (c*e - b*f)/ ((a*e) - (b*d))
	y = (a*f - c*d)/ ((a*e) - (b*d))
	print(x)
	print(y)
else:
	resp = "Nao tem solucao"
	print(resp)
-- EXECUTION TIME:
0.150119
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
